# frc-robotcode

./: .gitignore  Elastic-Layout  README.md  SETUP.md  START.bat  constants.py  deploy.py  deploy_headless.py  docs.py  elastic-layout.json  elastic.md  firewall.py  gamepads.py  guide.md  motorcontrollers.py  orangepi_pusher.py  push.py  pyproject.toml  robot.py  robotcontainer.py  setup.py  setup_headless.py  setup_orangepi.py  start.bash  start.command  start.py  start.vbs  telemetry.py  tunables.py  ui_mode.py  update.py  update_orangepi.py  vision.py  wipe_rio.py
acuity/: README.md
acuity/libraries/python/: README.md  pyproject.toml
acuity/libraries/python/acuity_vision/: __init__.py
commands/: auto_aim.py  auto_fire.py  cease_fire.py  clear_out.py  clear_shooter.py  conveyor_fwd.py  conveyor_rev.py  drive_normal.py  drive_slow.py  elevator_down.py  elevator_up.py  feeder_in.py  feeder_out.py  fire.py  fire_and_intake.py  hood_down.py  hood_up.py  kicker_in.py  kicker_out.py  launch.py  pov_pressed.py  run_elevator_to_top_pid.py  run_hood_to_top_pid.py  run_test_motor_fwd.py  run_test_motor_rev.py  shoot.py  stop_conveyor.py  stop_elevator.py  stop_feeder.py  stop_hood.py  stop_kicker.py  stop_shooter.py  stop_test_motor.py
documentation/: elastic.md  guide.md  orangepi.md  vision_setup.md
orangepi/: README.md  cold-fusion-sight.service  install.sh  manual_net_install.sh  nt4_client.py  requirements.txt  server.py
pi-image/: README.md  build.sh  install.sh  manufacturer-setup.sh
simulation/: server.py
subsystems/: command_swerve_drivetrain.py  feeder.py  (+9 more)
(+167 files in other folders)
